--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,13 @@
     <string name="cambio_piezas_descripcion">Información relacionada al cambio de Piezas</string>
     <string name="servicio_3_titulo">Servicio 3</string>
     <string name="servicio_3_descripcion">Descripción del Servicio 3</string>
+    <string name="palabra_direccion">Dirección</string>
+    <string name="palabra_horario">Horario</string>
+    <string name="palabra_telefono">Teléfono</string>
+    <string name="palabra_mapa">Ver en el Mapa</string>
+    <string name="palabra_llamar">Llamar</string>
+    <string name="palabra_municipio">Municipio</string>
+    <string name="palabra_nombre">Nombre</string>
 
     //INFORMACIONES
     <string name="informaciones">Informaciones</string>
@@ -170,62 +177,64 @@
         D) Compraventa\n
         E) Fallecimiento\n
 \n
-Para realizar este Trámite, debe presentar:\n
-        A) La propiedad del Título de la Vivienda.\n
+Para realizar este trámite, debe presentar:\n
+        A) La propiedad del título de la vivienda.\n
         B) Una fotocopia de la misma.\n
-        C) La Libreta de Consumo.\n
-        D) El Carnet de Identidad con la dirección Actualizada.\n
-        E) El Contrato del Gas Licuado. \n
-\n
-En caso de trasladarse de otra provincia además, deben presentar el Modelo de traslado que lo acredite, que es cliente de gas Licuado.\n
+        C) La libreta de consumo.\n
+        D) El carnet de identidad con la dirección actualizada.\n
+        E) El contrato del gas licuado. \n
+
+</string>
+    <string name="texto_titular_segundo">En caso de trasladarse de otra provincia además, deben presentar el Modelo de traslado que lo acredite, que es cliente de gas Licuado.\n
 \n
 En caso de las Nuevas viviendas y en las Compraventas, si el nuevo titular no tiene Contrato de gas Licuado,   y desea ser Cliente De gas Licuado a partir de este momento entonces deberá abonar la Cuantía de 400.00 pesos por el alquiler del Cilindro  en la Casa Comercial y la suma de 110.00 pesos cuando Adquiera el Cilindro Lleno en los Puntos de Venta, para estos clientes no existe límite de ciclo para  adquisición del gas.\n
-\n
-En caso de adjudicación por fallecimiento debe presentar el Certificado de defunción.\n
+\n</string>
+
+    <string name="texto_titular_tercero">En caso de adjudicación por fallecimiento debe presentar el Certificado de defunción.\n
 \n
 En caso de adjudicación por salida del país debe presentar el Certificado de la Oficina de Inmigración.\n
-\n
-Cuando se haga adjudicación por Donación del contrato del gas, Debe presentarse con el Titular anterior y una carta de Donación del Contrato de gas licuado y Firmado por ambas persona.\n</string>
-
+\n</string>
+    <string name="texto_titular_cuarto">Cuando se haga adjudicación por Donación del contrato del gas, Debe presentarse con el Titular anterior y una carta de Donación del Contrato de gas licuado y Firmado por ambas persona.\n</string>
     <string name="texto_altasbajas_completo">Altas y Bajas de la Cantidad de Persona en el Núcleo \n
 \n
-Para realizar este Trámite, Debe presentar: \n
-        A) La Libreta de Consumo. \n
-        B) El Carnet de Identidad con la dirección Actualizada. \n
-        C) El Contrato del Gas Licuado. \n
+Para realizar este trámite, debe presentar: \n
+        A) La libreta de consumo. \n
+        B) El carnet de identidad con la dirección actualizada. \n
+        C) El contrato del gas licuado. \n
 </string>
 
-    <string name="texto_contrato_completo">Traslado del Contrato de Gas Licuado. \n
+    <string name="titulo_traslado_contrato">Traslado del Contrato de Gas Licuado \n
 \n
-Para realizar este Trámite, Debe presentar: \n
-        A) La baja de la Oficiada y el Cierre de la  Libreta de Consumo. \n
-        B) El Carnet de Identidad con la dirección Actualizada para donde se va a trasladar. \n
-        C) El  Contrato del Gas Licuado. \n
-        D) Los cilindros de gas Licuado que tengan en su poder. \n
+Para realizar este trámite, debe presentar: \n
+        A) La baja de la oficoda y el cierre de la  libreta de consumo. \n
+        B) El carnet de identidad con la dirección actualizada para donde se va a trasladar. \n
+        C) El  contrato del gas licuado. \n
+        D) Los cilindros de gas licuado que tengan en su poder. \n</string>
+
+    <string name="titulo_contrato_nucleo_dividido">Actualizar  y Renovar los Contratos que sean Núcleos Divididos \n
 \n
-Actualizar  y Renovar los Contratos que sean Núcleos Divididos. \n
+Para realizar este trámite, debe presentar: \n
+        A) La libreta de consumo. \n
+        B) El carnet de identidad con la dirección actualizada. \n
+        C) El contrato del gas licuado. \n
+Nota: Debe presentarse en la casa comercial todos los años o cada 12 meses. \n
+Siempre debe presentarse el titular del núcleo dividido. \n
+Al núcleo dividido no se le dará alta en la composición de núcleos, a personas mayores solamente y a los recién nacidos. \n
+    </string>
+
+    <string name="texto_contrato_reserva">Actualizar y Renovar los Contratos Reservas. \n
 \n
-Para realizar este Trámite, Debe presentar: \n
-        A) La Libreta de Consumo. \n
-        B) El Carnet de Identidad con la dirección Actualizada. \n
-        C) El Contrato del Gas Licuado. \n
-Nota: Debe presentarse en la casa Comercial todos los años o cada 12 meses. \n
-Siempre debe presentarse el Titular del Núcleo Dividido. \n
-Al Núcleo Dividido no se le dará alta en la composición de núcleos, a personas mayores solamente y a los Recién nacidos. \n
+Nota: Para estos clientes que estén en la condición de postrados el ciclo será cada  3 meses. \n
 \n
-Atualizar y Renovar los Contratos Reservas. \n
+Para realizar este trámite: \n
+        A) Se debe  verificar si ya llegó la autorización de salud pública. \n
+        B) La libreta de consumo. \n
+        C) El carnet de identidad con la dirección actualizada del postrado. \n
+        D) El contrato del gas licuado. \n
 \n
-Nota: Para estos Clientes que estén en la Condición de Postrados el ciclo será cada  3 meses. \n
-\n
-Para realizar este Trámite: \n
-        A) Se debe  verificar si ya llego la autorización de salud pública. \n
-        B) La Libreta de Consumo. \n
-        C) El Carnet de Identidad con la dirección Actualizada del Postrado. \n
-        D) El Contrato del Gas Licuado. \n
-\n
-Nota: Debe presentarse en la casa Comercial todos los años o cada 12 meses. \n
-Siempre debe presentarse el Titular  Contrato. \n
-Una vez fallecido el enfermo ,  el Contrato pasara al ciclo establecido para los Clientes de Reserva que es cada 6 meses o 2 veces al año. \n
+Nota: Debe presentarse en la casa comercial todos los años o cada 12 meses. \n
+Siempre debe presentarse el titular  contrato. \n
+En caso de fallecer el enfermo, el contrato pasará al ciclo establecido para los clientes de reserva que es cada 6 meses o 2 veces al año. \n
 </string>
 
     <string name="texto_contrato_averia">Número de teléfono para realizar los reportes: \n
@@ -257,10 +266,15 @@ Y no se le cobrara la mano de obra. \n
     <string name="title_activity_main">MainActivity</string>
     <string name="nav_header_desc">Navigation header</string>
 
+    <string name="menu_creditos">Créditos</string>
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="title_activity_informaciones_tab">InformacionesTabActivity</string>
+    <string name="title_activity_servicios_tab">ServiciosTabActivity</string>
+    <string name="title_activity_tramites_tab">TramitesTabActivity</string>
+    <string name="title_activity_detalles">Detalles</string>
 </resources>
